<?xml version="1.0"?>
<package>
  <name>rviz_to_rwt</name>
  <version>0.0.0</version>
  <description>The rviz_to_rwt package</description>

  <maintainer email="dlu@todo.todo">dlu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
</package>
