<?xml version="1.0"?>
<package>
  <name>rwt_config_generator</name>
  <version>0.0.2</version>
  <description>The rwt_config_generator package</description>

  <maintainer email="davidvlu@gmail.com">David V. Lu!!</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
</package>
